# traffic-sign-recognition

./: .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Die präzise Stufe-4-Spezifikation.txt  LICENSE  README.md  SECURITY.md  environment.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
configs/: deep_traffic_net.yaml  default.yaml  smoke_test.yaml  traffic_sign_net.yaml  traffic_sign_net_stn.yaml
data/: README.md
docs/: 01_introduction.md  02_related_work.md  03_dataset.md  04_methodology.md  05_architectures.md  06_training_setup.md  07_results.md  08_discussion.md  09_engineering.md  10_reproducibility.md  11_future_work.md  OUTLINE.md  README.md  STYLE.md  math_test.md  references.md
notebooks/: 00_showcase.ipynb  probe_minimal.ipynb
reports/figures/dataset/: class_distribution.csv
reports/metrics/: comparison.csv  comparison.json
reports/metrics/deep_traffic_net/: classification_report.csv  test_metrics.json  training_history.json
reports/metrics/traffic_sign_net/: classification_report.csv  test_metrics.json  training_history.json
reports/metrics/traffic_sign_net_stn/: classification_report.csv  test_metrics.json  training_history.json
scripts/: bootstrap_git.ps1  bootstrap_git.sh  generate_dataset_figures.py  generate_figure_6_1.py  generate_figure_7_7.py  prepare_test_set.py  train_all.py
src/traffic_signs/: __init__.py  cli.py  config.py
src/traffic_signs/data/: __init__.py  gtsrb.py
src/traffic_signs/evaluation/: __init__.py  metrics.py  reports.py
src/traffic_signs/inference/: __init__.py  predict.py
src/traffic_signs/models/: __init__.py  deep_traffic_net.py  registry.py  stn.py  traffic_sign_net.py
src/traffic_signs/training/: __init__.py  trainer.py
src/traffic_signs/utils/: __init__.py  device.py  logging_setup.py  seed.py
tests/: conftest.py  test_config.py  test_data.py  test_evaluation.py  test_models.py  test_seed.py  test_trainer.py
