[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "traffic-signs"
version = "0.2.0"
description = "Traffic-sign recognition on GTSRB: reproducible CNN training, evaluation and inference."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Repository maintainer" }]
keywords = ["computer-vision", "gtsrb", "cnn", "pytorch", "traffic-sign-recognition"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dynamic = ["dependencies"]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.9",
    "nbstripout>=0.7",
]
tf = ["tensorflow>=2.15,<3.0"]

[project.scripts]
traffic-signs-train   = "traffic_signs.cli:train_cli"
traffic-signs-eval    = "traffic_signs.cli:evaluate_cli"
traffic-signs-predict = "traffic_signs.cli:predict_cli"

[project.urls]
Homepage = "https://github.com/<your-user>/traffic-sign-recognition"
Issues   = "https://github.com/<your-user>/traffic-sign-recognition/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }

# ---------------------------------------------------------------------
# Ruff — linter + formatter
# ---------------------------------------------------------------------
[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src", "tests"]
extend-exclude = ["notebooks", "data", "checkpoints", "reports"]

[tool.ruff.lint]
select = [
    "E", "F", "W",   # pycodestyle + pyflakes
    "I",             # isort
    "N",             # pep8-naming
    "UP",            # pyupgrade
    "B",             # bugbear
    "C4",            # comprehensions
    "SIM",           # simplify
    "RUF",           # ruff-specific
]
ignore = ["E501"]    # line length is handled by formatter

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["N802", "N803", "B017", "RUF002"]
# `from torch.nn import functional as F` is the universally accepted convention.
"src/traffic_signs/models/stn.py" = ["N812"]
# Docstrings contain legitimate maths notation (×, ≤).
"src/traffic_signs/models/*.py" = ["RUF002"]
"src/traffic_signs/data/gtsrb.py" = ["RUF002"]

# ---------------------------------------------------------------------
# mypy
# ---------------------------------------------------------------------
[tool.mypy]
python_version = "3.11"
strict = false
warn_unused_ignores = true
warn_redundant_casts = true
ignore_missing_imports = true
files = ["src/traffic_signs"]

# ---------------------------------------------------------------------
# pytest
# ---------------------------------------------------------------------
[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra --strict-markers --strict-config"
testpaths = ["tests"]
pythonpath = ["src"]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::UserWarning",
]
